Initial check in for PDF watermark code.

--- a/config/alfresco/messages/pdf-toolkit.properties
+++ b/config/alfresco/messages/pdf-toolkit.properties
@@ -12,3 +12,11 @@ pdfappend_to=Append to
 action_pdf_split_at_page=Split PDF at Page ''{0}'', and copies into ''{1}''
 title_action_pdf_split_at_page=Split PDF at Page
 pdfsplit_at_page=Split at page
+
+action_pdf_watermark=Watermark incoming PDF with image ''{0}'' and save resulting PDF in ''{1}''
+title_action_pdf_watermark=Watermark PDF
+pdfwatermark_image=Watermark Image
+pdfwatermark_image_selector=Click here to select the watermark image
+pdfwatermark_watermark_pages=Pages to watermark
+pdfwatermark_watermark_position=Watermark position
+pdfwatermark_watermark_depth=Watermark depth (over/under content)
