Cosmetic fix to PDF Watermark action Added PDF encryption module

--- a/config/alfresco/messages/pdf-toolkit.properties
+++ b/config/alfresco/messages/pdf-toolkit.properties
@@ -20,3 +20,18 @@ pdfwatermark_image_selector=Click here to select the watermark image
 pdfwatermark_watermark_pages=Pages to watermark
 pdfwatermark_watermark_position=Watermark position
 pdfwatermark_watermark_depth=Watermark depth (over/under content)
+
+action_pdf_encryption=Encrypt PDF, set configured permissions and save resulting document in ''{0}''
+title_action_pdf_encryption=Encrypt PDF and set permissions
+pdfencryption_userpassword=PDF user password
+pdfencryption_ownerpassword=PDF owner password
+pdfencryption_allowprint=Allow printing
+pdfencryption_allowcopy=Allow copying
+pdfencryption_allowcontentmodification=Allow modification of content
+pdfencryption_allowannotationmodification=Allow modification of annotations
+pdfencryption_allowformfill=Allow form fill
+pdfencryption_allowscreenreader=Allow screen reader access
+pdfencryption_allowdegradedprint=Allow degraded print
+pdfencryption_allowassembly=Allow assembly
+pdfencryption_encryptionlevel=Encryption level
+pdfencryption_excludemetadata=Exclude metadata
