Added additional messages to support pdf watermarking

--- a/config/alfresco/messages/pdf-toolkit.properties
+++ b/config/alfresco/messages/pdf-toolkit.properties
@@ -13,13 +13,17 @@ action_pdf_split_at_page=Split PDF at Page ''{0}'', and copies into ''{1}''
 title_action_pdf_split_at_page=Split PDF at Page
 pdfsplit_at_page=Split at page
 
-action_pdf_watermark=Watermark incoming PDF with image ''{0}'' and save resulting PDF in ''{1}''
+action_pdf_watermark=Watermark incoming PDF
 title_action_pdf_watermark=Watermark PDF
 pdfwatermark_image=Watermark Image
 pdfwatermark_image_selector=Click here to select the watermark image
-pdfwatermark_watermark_pages=Pages to watermark
-pdfwatermark_watermark_position=Watermark position
-pdfwatermark_watermark_depth=Watermark depth (over/under content)
+pdfwatermark_pages=Pages to watermark
+pdfwatermark_position=Watermark position
+pdfwatermark_depth=Watermark depth (over/under content)
+pdfwatermark_type=Watermark Type
+pdfwatermark_text=Watermark Text
+pdfwatermark_font=Watermark Font
+pdfwatermark_size=Watermark Font Size
 
 action_pdf_encryption=Encrypt PDF, set configured permissions and save resulting document in ''{0}''
 title_action_pdf_encryption=Encrypt PDF and set permissions
