Initial check in of digital signature code. Bug fixes for encryption.

--- a/config/alfresco/messages/pdf-toolkit.properties
+++ b/config/alfresco/messages/pdf-toolkit.properties
@@ -39,3 +39,16 @@ pdfencryption_allowdegradedprint=Allow degraded print
 pdfencryption_allowassembly=Allow assembly
 pdfencryption_encryptionlevel=Encryption level
 pdfencryption_excludemetadata=Exclude metadata
+
+action_pdf_signature=Sign PDF
+title_action_pdf_signature=Digitally sign PDF
+pdfsignature_private_key=Private key file
+pdfsignature_key_password=Password
+pdfsignature_reason=Reason
+pdfsignature_location=Location
+pdfsignature_visibility=Apply visible signature
+pdfsignature_location_x=Signature X
+pdfsignature_location_y=Signature Y
+pdfsignature_width=Width
+pdfsignature_height=Height
+
