fixed a few small bugs in the existing PDF digital signatures. added support for PKCS12 keys (both .pfx and .p12 files)

--- a/config/alfresco/messages/pdf-toolkit.properties
+++ b/config/alfresco/messages/pdf-toolkit.properties
@@ -51,4 +51,5 @@ pdfsignature_location_x=Signature X
 pdfsignature_location_y=Signature Y
 pdfsignature_width=Width
 pdfsignature_height=Height
+pdfsignature_key_type=Key Type
 
