--- a/config/alfresco/messages/pdf-toolkit.properties
+++ b/config/alfresco/messages/pdf-toolkit.properties
@@ -18,7 +18,6 @@ title_action_pdf_watermark=Watermark PDF
 pdfwatermark_image=Watermark Image
 pdfwatermark_image_selector=Click here to select the watermark image
 pdfwatermark_pages=Pages to watermark
-pdfwatermark_position=Watermark position
 pdfwatermark_depth=Watermark depth (over/under content)
 pdfwatermark_type=Watermark Type
 pdfwatermark_text=Watermark Text
@@ -47,9 +46,11 @@ pdfsignature_key_password=Password
 pdfsignature_reason=Reason
 pdfsignature_location=Location
 pdfsignature_visibility=Apply visible signature
-pdfsignature_location_x=Signature X
-pdfsignature_location_y=Signature Y
 pdfsignature_width=Width
 pdfsignature_height=Height
 pdfsignature_key_type=Key Type
 
+# common elements used by other stamp types
+pdfstamp_position=Watermark position
+pdfstamp_location_x=Signature X
+pdfstamp_location_y=Signature Y
