--- a/config/alfresco/messages/pdf-toolkit.properties
+++ b/config/alfresco/messages/pdf-toolkit.properties
@@ -51,6 +51,6 @@ pdfsignature_height=Height
 pdfsignature_key_type=Key Type
 
 # common elements used by other stamp types
-pdfstamp_position=Watermark position
-pdfstamp_location_x=Signature X
-pdfstamp_location_y=Signature Y
+pdfstamp_position=Pre-defined position
+pdfstamp_location_x=Absolute X (in pixels)
+pdfstamp_location_y=Absolute Y (in pixels)
