Bug fixing and minor UI modifications in PDF Signature feature

--- a/config/alfresco/messages/pdf-toolkit.properties
+++ b/config/alfresco/messages/pdf-toolkit.properties
@@ -47,7 +47,8 @@ pdfencryption_excludemetadata=Exclude metadata
 
 action_pdf_signature=Sign PDF
 title_action_pdf_signature=Digitally sign PDF
-pdfsignature_private_key=Private key file
+#pdfsignature_private_key=Private key file
+pdfsignature_private_key=Key Store file
 pdfsignature_key_password=Password
 pdfsignature_reason=Reason
 pdfsignature_location=Location
@@ -55,6 +56,9 @@ pdfsignature_visibility=Apply visible signature
 pdfsignature_width=Width
 pdfsignature_height=Height
 pdfsignature_key_type=Key Type
+
+pdfsignature_alias=Alias
+pdfsignature_store_password=Key Store Password
 
 # common elements used by other stamp types
 pdfstamp_position=Pre-defined position
