Test commit, updated module properties with new description.

--- a/config/module.properties
+++ b/config/module.properties
@@ -2,5 +2,5 @@
 module.id=org.alfresco.extension.pdftoolkit
 module.version=0.97
 module.title=Alfresco PDF Toolkit
-module.description=This module adds functionality to manipulate PDFs
+module.description=This module adds functionality to manipulate PDF, including split, merge, encrypt, sign and watermark
 module.repo.version.min=3.2
