--- a/src/org/alfresco/extension/pdftoolkit/web/bean/actions/handlers/pdfinsert-messages.properties
+++ b/src/org/alfresco/extension/pdftoolkit/web/bean/actions/handlers/pdfinsert-messages.properties
@@ -1,3 +1,7 @@
 #PDF Append strings
 pdf-insert-at-page.title=Insert PDF
 pdf-insert-at-page.description=Insert PDF into another PDF
+pdf-insert-at-page.destination-folder.display-label=Destination folder
+pdf-insert-at-page.insert-at-page.display-label=Insert at page
+pdf-insert-at-page.destination-name.display-label=Destination name
+pdf-insert-at-page.insert-content.display-label=Content to insert
