--- a/src/org/alfresco/extension/pdftoolkit/web/bean/actions/handlers/pdfsplit-messages.properties
+++ b/src/org/alfresco/extension/pdftoolkit/web/bean/actions/handlers/pdfsplit-messages.properties
@@ -1,3 +1,5 @@
 #PDF Split strings
 pdf-split.title=Split PDF
 pdf-split.description=Split PDF into individual pages
+pdf-split.destination-folder.display-label=Destination folder
+pdf-split.split-frequency.display-label=Split frequency
