--- a/src/org/alfresco/extension/pdftoolkit/web/bean/actions/handlers/pdfsplitatpage-messages.properties
+++ b/src/org/alfresco/extension/pdftoolkit/web/bean/actions/handlers/pdfsplitatpage-messages.properties
@@ -1,3 +1,5 @@
 #PDF Split At Page strings
 pdf-split-at-page.title=Split PDF At Page
 pdf-split-at-page.description=Split PDF at specific page
+pdf-split-at-page.destination-folder.display-label=Destination folder
+pdf-split-at-page.split-at-page.display-label=Split at page number
