Final check in before restructuring the project to use Maven build process

--- a/amp-build.properties
+++ b/amp-build.properties
@@ -1,4 +1,5 @@
 amp.name=alfresco-pdf-toolkit
 lib.name=alfresco-pdf-toolkit
-sdk.path=alfresco/3.2/sdk
+sdk.path=/Users/McMinn/Documents/Alfresco/enterprise-4.0.0/sdk
+deploy.path=/Users/McMinn/Documents/Alfresco/community-4.0.d/amps
 developer.mode=true
