Added public Alfresco repository references to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,20 @@
 	<version>0.98.28-SNAPSHOT</version>
 	<packaging>amp</packaging>
 	<name>Alfresco PDF Toolkit</name>
+	<repositories>
+		<repository>
+			<id>alfresco-public-snapshots</id>
+			<url>https://artifacts.alfresco.com/nexus/content/groups/public-snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>daily</updatePolicy>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>alfresco-public</id>
+			<url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
+		</repository>
+	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>alfresco-public</id>
