Added new content model Wired content model in via Spring config Minor update to pom.xml and module.properties

--- a/alfresco-pdf-toolkit-repo/module.properties
+++ b/alfresco-pdf-toolkit-repo/module.properties
@@ -1,6 +1,10 @@
 #Alfresco PDF Toolkit module properties
 module.id=org.alfresco.extension.pdftoolkit
-module.version=0.98.27
-module.title=Alfresco PDF Toolkit
-module.description=This module adds functionality to manipulate PDF, including split, merge, encrypt, sign and watermark
+#module.version=0.98.28
+#module.title=Alfresco PDF Toolkit
+#module.description=This module adds functionality to manipulate PDF, including split, merge, encrypt, sign and watermark
 module.repo.version.min=3.2
+#module.id=${project.artifactId}
+module.title=${project.name}
+module.description=${project.description}
+module.version=0.98.28
