--- a/alfresco-pdf-toolkit-repo/pom.xml
+++ b/alfresco-pdf-toolkit-repo/pom.xml
@@ -99,6 +99,13 @@
 			<version>5.1.3</version>
 			<type>jar</type>
 		</dependency>
+		
+		<dependency>
+		  	<groupId>rhino</groupId>
+		  	<artifactId>js</artifactId>
+		  	<version>1.6R7-patched</version>
+		  	<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
