Added support for PDF Toolkit content model:
Advanced search on signature date, reason and location
Visibility of "signed" aspect

--- a/alfresco-pdf-toolkit-share/src/main/config/alfresco/messages/pdftoolkit.properties
+++ b/alfresco-pdf-toolkit-share/src/main/config/alfresco/messages/pdftoolkit.properties
@@ -22,3 +22,13 @@ actions.pdftoolkit.insertPDF=Insert Pages into PDF
 actions.pdftoolkit.splitPDF=Split PDF Document
 actions.pdftoolkit.signPDF=Sign PDF Document
 actions.pdftoolkit.watermarkPDF=Watermark PDF Document
+
+#aspect labels
+aspect.pdft_signed=PDFToolkit Signed
+prop.pdft_signaturedate=Signature Date
+prop.pdft_reason=Signature Reason
+prop.pdft_location=Signature Location
+
+#custom labels for advance search
+pdftoolkit.aspect.signed.search.type=Signed PDF Documents
+pdftoolkit.aspect.signed.search.description=Search for signed PDF documents
