Final commit for next release All currently enabled Share extensions have been tested and are functioning as intended.

--- a/alfresco-pdf-toolkit-repo/src/main/resources/alfresco/messages/pdf-toolkit.properties
+++ b/alfresco-pdf-toolkit-repo/src/main/resources/alfresco/messages/pdf-toolkit.properties
@@ -5,8 +5,8 @@ title_action_pdf_split=Split PDF
 pdfsplit_frequency=Split every
 
 action_pdf_append=Append to ''{0}'' and save as ''{1}''.pdf in ''{2}''
-title_action_pdf_append=Merge PDF
-pdfappend_name=Merged Name
+title_action_pdf_append=Append PDF
+pdfappend_name=Appended Name
 pdfappend_to=Append to
 
 action_pdf_split_at_page=Split PDF at Page ''{0}'', and copies into ''{1}''
