--- a/alfresco-pdf-toolkit-share/src/main/config/alfresco/messages/pdftoolkit.properties
+++ b/alfresco-pdf-toolkit-share/src/main/config/alfresco/messages/pdftoolkit.properties
@@ -4,7 +4,7 @@ pdftoolkit.select-folder=Select Folder
 pdftoolkit.select-node=Select File
 
 # Merge PDF (PDFAppend) labels
-pdftoolkit.append.target-node=Append
+pdftoolkit.append.target-node=Append To
 
 #Sign PDF (PDFSignature) labels
 pdftoolkit.signature.private-key=Private Key File
@@ -16,7 +16,7 @@ pdftoolkit.insert.target-node=Insert
 pdftoolkit.watermark.image=Watermark Image
 
 #Doclib action labels 
-actions.pdftoolkit.mergePDF=Merge with Another PDF
+actions.pdftoolkit.appendPDF=Append Another PDF
 actions.pdftoolkit.encryptPDF=Encrypt PDF Document
 actions.pdftoolkit.insertPDF=Insert Pages into PDF
 actions.pdftoolkit.splitPDF=Split PDF Document
@@ -28,7 +28,15 @@ aspect.pdft_signed=PDFToolkit Signed
 prop.pdft_signaturedate=Signature Date
 prop.pdft_reason=Signature Reason
 prop.pdft_location=Signature Location
+prop.pdft_signer=Signer
+
+aspect.pdft_encrypted=PDFToolkit Encrypted
+prop.pdft_encryptiondate=Encryption Date
+prop.pdft_encryptedby=Encrypted By
 
 #custom labels for advance search
 pdftoolkit.aspect.signed.search.type=Signed PDF Documents
 pdftoolkit.aspect.signed.search.description=Search for signed PDF documents
+
+pdftoolkit.aspect.encrypted.search.type=Encrypted PDF Documents
+pdftoolkit.aspect.encrypted.search.description=Search for encrypted PDF documents
