--- a/alfresco-pdf-toolkit-repo/pom.xml
+++ b/alfresco-pdf-toolkit-repo/pom.xml
@@ -98,6 +98,12 @@
 			<artifactId>itextpdf</artifactId>
 			<version>5.0.6</version>
 			<type>jar</type>
+			<exclusions>
+				<exclusion>
+					<groupId>*</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		
 		<dependency>
