--- a/alfresco-pdf-toolkit-share/src/main/config/alfresco/messages/pdftoolkit.properties
+++ b/alfresco-pdf-toolkit-share/src/main/config/alfresco/messages/pdftoolkit.properties
@@ -16,10 +16,11 @@ pdftoolkit.insert.target-node=Insert
 pdftoolkit.watermark.image=Watermark Image
 
 #Doclib action labels 
-actions.pdftoolkit.appendPDF=Append Another PDF
+actions.pdftoolkit.mergePDF=Merge PDF Document
 actions.pdftoolkit.encryptPDF=Encrypt PDF Document
 actions.pdftoolkit.insertPDF=Insert Pages into PDF
 actions.pdftoolkit.splitPDF=Split PDF Document
+actions.pdftoolkit.splitPDFatpage=Split PDF Document at Page
 actions.pdftoolkit.signPDF=Sign PDF Document
 actions.pdftoolkit.watermarkPDF=Watermark PDF Document
 
@@ -39,4 +40,40 @@ pdftoolkit.aspect.signed.search.type=Signed PDF Documents
 pdftoolkit.aspect.signed.search.description=Search for signed PDF documents
 
 pdftoolkit.aspect.encrypted.search.type=Encrypted PDF Documents
-pdftoolkit.aspect.encrypted.search.description=Search for encrypted PDF documents
+
+#custom labels for indicators
+indicator.pdftoolkit.signed=This document has been signed with the PDF Toolkit
+indicator.pdftoolkit.encrypted=This document has been encrypted with the PDF Toolkit
+
+#success and failure messages for doclib actions
+message.pdf-watermark.success=The selected document was successfully watermarked
+message.pdf-watermark.failure=The watermark operation failed
+
+message.pdf-signature.success=The selected document was successfully signed
+message.pdf-signature.failure=The digital signature operation failed
+
+message.pdf-encryption.success=The selected document was successfully encrypted
+message.pdf-encryption.failure=The encryption operation failed
+
+message.pdf-split.success=The selected document was successfully split
+message.pdf-split.failure=The split operation failed
+
+message.pdf-split-at-page.success=The selected document was successfully split
+message.pdf-split-at-page.failure=The split operation failed
+
+message.pdf-append.success=The selected documents were successfully merged
+message.pdf-append.failure=The merge operation failed
+
+message.pdf-insert-at-page.success=The selected document was successfully inserted
+message.pdf-insert-at-page.failure=The insert operation failed
+
+
+
+
+
+
+
+
+
+
+t.aspect.encrypted.search.description=Search for encrypted PDF documents
