Fixed bug in the doclib actions, needed to capture the user info from the execution environment. Fixed share bug with incorrect label name

--- a/alfresco-pdf-toolkit-share/src/main/config/alfresco/messages/pdftoolkit.properties
+++ b/alfresco-pdf-toolkit-share/src/main/config/alfresco/messages/pdftoolkit.properties
@@ -29,7 +29,7 @@ aspect.pdft_signed=PDFToolkit Signed
 prop.pdft_signaturedate=Signature Date
 prop.pdft_reason=Signature Reason
 prop.pdft_location=Signature Location
-prop.pdft_signer=Signer
+prop.pdft_signedby=Signed By
 
 aspect.pdft_encrypted=PDFToolkit Encrypted
 prop.pdft_encryptiondate=Encryption Date
