Added action class, spring config, properties files, share config and image assets for PDF delete page action.

--- a/alfresco-pdf-toolkit-repo/src/main/resources/alfresco/messages/pdf-toolkit.properties
+++ b/alfresco-pdf-toolkit-repo/src/main/resources/alfresco/messages/pdf-toolkit.properties
@@ -64,3 +64,7 @@ pdfsignature_store_password=Key Store Password
 pdfstamp_position=Pre-defined position
 pdfstamp_location_x=Absolute X (in pixels)
 pdfstamp_location_y=Absolute Y (in pixels)
+
+action_pdf_delete=Delete pages from PDF document
+pdfdelete_deletepages=Pages to Delete
+pdfdelete_name=Destination File Name
