--- a/alfresco-pdf-toolkit-share/src/main/config/alfresco/messages/pdftoolkit.properties
+++ b/alfresco-pdf-toolkit-share/src/main/config/alfresco/messages/pdftoolkit.properties
@@ -23,6 +23,7 @@ actions.pdftoolkit.splitPDF=Split PDF Document
 actions.pdftoolkit.splitPDFatpage=Split PDF Document at Page
 actions.pdftoolkit.signPDF=Sign PDF Document
 actions.pdftoolkit.watermarkPDF=Watermark PDF Document
+actions.pdftoolkit.deletePDFpages=Delete Pages from PDF
 
 #aspect labels
 aspect.pdft_signed=PDFToolkit Signed
@@ -66,6 +67,9 @@ message.pdf-append.failure=The merge operation failed
 
 message.pdf-insert-at-page.success=The selected document was successfully inserted
 message.pdf-insert-at-page.failure=The insert operation failed
+
+message.pdf-delete-page.success=The selected pages were deleted
+message.pdf-delete-page.failure=The delete operation failed
 
 
 
