--- a/alfresco-pdf-toolkit-repo/pom.xml
+++ b/alfresco-pdf-toolkit-repo/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.alfresco.extension</groupId>
 	<artifactId>alfresco-pdf-toolkit</artifactId>
-	<version>0.98.28-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>amp</packaging>
 	<name>Alfresco PDF Toolkit</name>
 	<repositories>
