--- a/alfresco-pdf-toolkit-repo/pom.xml
+++ b/alfresco-pdf-toolkit-repo/pom.xml
@@ -60,7 +60,12 @@
 			<version>4.0.d</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+		  	<groupId>org.springframework.extensions.surf</groupId>
+		  	<artifactId>spring-webscripts</artifactId>
+		  	<version>1.0.0</version>
+		  	<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
