--- a/alfresco-pdf-toolkit-repo/pom.xml
+++ b/alfresco-pdf-toolkit-repo/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.alfresco.extension</groupId>
 	<artifactId>alfresco-pdf-toolkit</artifactId>
-	<version>1.1.0</version>
+	<version>1.1.1</version>
 	<packaging>amp</packaging>
 	<name>Alfresco PDF Toolkit</name>
 	<repositories>
@@ -23,11 +23,11 @@
 	<pluginRepositories>
 		<pluginRepository>
 			<id>alfresco-public</id>
-			<url>http://artifacts.alfresco.com/nexus/content/groups/public</url>
+			<url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
 		</pluginRepository>
 		<pluginRepository>
 			<id>alfresco-public-snapshots</id>
-			<url>http://artifacts.alfresco.com/nexus/content/groups/public-snapshots</url>
+			<url>https://artifacts.alfresco.com/nexus/content/groups/public-snapshots</url>
 			<snapshots>
 				<enabled>true</enabled>
 				<updatePolicy>daily</updatePolicy>
